--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,22 @@
+# Basic Site Information
+title: "Christian Arlington's Portfolio"
+description: "Certified IT Security Analyst specializing in data protection and compliance."
+baseurl: "" # Leave blank if deployed to the root of the GitHub Pages site
+url: "https://yourusername.github.io" # Replace with your GitHub Pages URL
 
+# Theme Selection
+theme: jekyll-theme-cayman # Replace "minima" with your desired Jekyll theme
+
+# Plugins (optional but recommended)
+plugins:
+  - jekyll-feed
+  - jekyll-seo-tag
+
+# Markdown Configuration
+markdown: kramdown
+kramdown:
+  input: GFM # GitHub-Flavored Markdown for better compatibility with README.md
+
+# Exclude unnecessary files from the site
+exclude:
+  - README.md # Optional: Exclude if renamed to index.md
