--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 # Basic Site Information
 title: "Christian Arlington's Portfolio"
-description: "Certified IT Security Analyst specializing in data protection and compliance."
+description: "“It takes 20 years to build a reputation and a few minutes of cyber-incident to ruin it.” ― Stephane Nappo.
+"
 baseurl: "" # Leave blank if deployed to the root of the GitHub Pages site
 url: "https://NauticalAnalysis.github.io" # Replace with your GitHub Pages URL
 
